{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Movement",
            "id": "be5503f8-e6bb-4d8d-a070-6c5d6a6bac21",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "be89a7e6-d966-476c-aa58-c64ce941deb0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ad4fb51c-c0a3-42d1-b0ae-9e74deb7fcf3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ee80f746-f823-44ec-9356-d8ce234df47b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c7754702-399b-4dc4-bfbe-7f584a58d908",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "58ac9397-3df6-45b5-b0bb-9c370f7c3e70",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dfabf275-836c-4a16-a2a5-9d50176e2d40",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Action",
            "id": "763bd5be-4074-4eaf-8d0f-7a94422d09d4",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "29ad8735-920d-4316-9d82-f8da6b4a2494",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shot",
                    "type": "Button",
                    "id": "89914942-0000-483b-acf5-5218e76d2cc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shrink",
                    "type": "Button",
                    "id": "3b33f48b-c5fe-444a-afbb-49065296ae69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ada6c3e6-d324-4740-82d0-6cfa09d13ecd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ca465d8-84f1-435c-8f8a-93c680664839",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b640246-9116-49f1-b48c-4023bfe15e92",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shrink",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cee345c2-7037-4670-9793-487c72d1d3b0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shrink",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}